feat: 날씨 캐시 저장 시 사용자 식별 및 위치 변환 로직 개선
- 위경도 기반 요청을 x,y 격자 좌표로 백엔드에서 변환하도록 WeatherUtil 도입
- WEATHER_CACHE 테이블 컬럼 X, Y 타입을 INT로 변경하고 DTO에 반영
- WEATHER_CACHE 테이블 컬럼 BASE_DATE 타입을 DATE로 변경
- getWeather() 서비스 메서드 파라미터에 사용자 ID 추가
- 로그인 유저는 사용자 ID를, 비회원은 'GUEST'를 regId/chgId로 저장